[package]
name = "kvault"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
tokio = { version = "1.27", features = ["full", "time"] }
axum = { version = "0.6" , features = ["multipart"] }

# Axum builds on the types in Tower
tower = "0.4"
tower-http = { version = "0.4", features = [ "trace", "fs" ] }

# Database
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "sqlite", "macros", "offline", "chrono"]}

# Logs
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

# Utility
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
reqwest = "0.11"
log = "0.4"
async-recursion = "1.0"
md5 = "0.7"
derive_more = "0.99"
